--- a/content-manager-app/styles/globals.css
+++ b/content-manager-app/styles/globals.css
@@ -17,3 +17,36 @@ a {
 .resource-form {
   margin-top: 100px;
 }
+
+.active-resource {
+  background-color: #3140aa;
+  padding: 50px;
+  text-align: center;
+  color: white;
+  height: 300px;
+}
+
+.active-resource .resource-name {
+  font-size: 30px;
+  height: 50px;
+}
+
+.active-resource .elapsed-time {
+  font-size: 64px;
+  font-weight: bold;
+}
+
+
+.active-resource .time-wrapper {
+  height: 100px;
+}
+
+.tag.resource-complete {
+  background-color: greenyellow;
+}
+.tag.resource-inactive {
+  background-color: orange;
+}
+.tag.resource-active {
+  background-color: dodgerblue;
+}
